# airflow_example_project

./: .dockerignore  .gitignore  docker-compose.yml
dags/: esg_pipeline.py  example.py  simulate-client-s3.py
dags/include/helpers/: __init__.py
dags/include/helpers/example/: __init__.py  tasks.py
images/airflow-with-requirements/: Dockerfile  requirements.txt
include/helpers/: Dockerfile  pyproject.toml  requirements.txt
include/helpers/example/: minio_helper.py  tasks.py
spark/notebooks/stock_transform/: Dockerfile  stock_transform.py
